LRQA-12004 Exclude module from portal build

--- a/build.properties
+++ b/build.properties
@@ -93,6 +93,7 @@
         util/source-formatter/,\
         util/sync-engine/,\
         util/tld-formatter/,\
+        util/ui-taglibs-sample/,\
         util/xml-formatter/
     build.modules.includes=\
         */**/build.gradle,\
