--- a/modules/apps/layout/layout-admin-web/build.gradle
+++ b/modules/apps/layout/layout-admin-web/build.gradle
@@ -8,6 +8,7 @@ dependencies {
 	compile project(":apps:mobile-device-rules:mobile-device-rules-api")
 	compile project(":apps:mobile-device-rules:mobile-device-rules-service")
 	compile project(":apps:product-navigation:product-navigation-site-administration")
+	compile project(":frontend:frontend-taglib")
 	compile project(":portal:portal-upgrade")
 }
 
