added files to roster in sitemap.json -updated template player card javascript -updated css in roster

--- a/nyxl-theme/src/WEB-INF/liferay-plugin-package.properties
+++ b/nyxl-theme/src/WEB-INF/liferay-plugin-package.properties
@@ -11,3 +11,7 @@ licenses=LGPL
 liferay-versions=7.0.0+
 
 resources-importer-developer-mode-enabled=true
+
+# Uncomment below if you need new Site to be published for archive.lar resource-import
+# resources-importer-target-class-name=com.liferay.portal.kernel.model.Group
+# resources-importer-target-value=TESTING 123
