--- a/alecs-theme/package.json
+++ b/alecs-theme/package.json
@@ -16,5 +16,8 @@
 	},
 	"main": "package.json",
 	"name": "alecs-theme",
-	"version": "1.0.0"
+	"version": "1.0.0",
+	"dependencies": {
+		"font-awesome": "^4.7.0"
+	}
 }
